# HartreeFockCppProgram

./: .gitignore  6-311g.0.json  CMakeLists.txt  LICENSE  Makefile  README.html  README.md  aug-cc-pv6z.1.json  classes  classes.cpp  flake.nix  h2o.xyz  notes.md  shell.nix  sto-6g.1.json  vcpkg.json
.github/workflows/: github-actions-demo.yml
docs/: achs_jcisd859_4814.bib
include/: classes.hpp  density.hpp  energy.hpp  functions.hpp  integrals.hpp  scf.hpp
src/: classes.cpp  density.cpp  energy.cpp  functions.cpp  integrals.cpp  main.cpp  scf.cpp
